# skillctl

./: .gitignore  Cargo.toml  README.md  spec.md  to-do.json
.agents/: skillctl.yaml
.agents/skills/release-notes/: .skillctl-projection.json  SKILL.md
.agents/skills/skillctl/: .skillctl-projection.json  SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: broader-product-completion-note.md  troubleshooting.md  user-guide.md
notes/: minimal-tui-stack.md  nucleo-ext-assessment.md
scripts/: install.sh  package-release.py  package-release.sh  release-smoke-test.sh
src/: adapter.rs  app.rs  builtin.rs  cli.rs  doctor.rs  error.rs  history.rs  lib.rs  lifecycle.rs  lockfile.rs  main.rs  manifest.rs  materialize.rs  mcp.rs  overlay.rs  planner.rs  resolver.rs  response.rs  runtime.rs  skill.rs  source.rs  state.rs  telemetry.rs  trust.rs  tui.rs
src/state/: codec.rs  schema.rs  tests.rs
tests/: cli.rs  integration_matrix.rs  mcp.rs  release.rs
tests/cli/: bundled.rs  cleanup.rs  help.rs  init.rs  install.rs  inventory.rs  override_cmd.rs  projection.rs  update.rs
tests/fixtures/broken-symlink/.agents/skills/release-notes/: SKILL.md  notes.md
tests/fixtures/canonical-only/.agents/skills/release-notes/: SKILL.md  notes.md
tests/fixtures/imported-with-overlay/.agents/skills/release-notes/: SKILL.md  notes.md
tests/fixtures/opencode-layout/.opencode/skills/ai-sdk/: SKILL.md
tests/fixtures/private-source/.agents/skills/private-skill/: SKILL.md
tests/fixtures/repo-root-layout/skills/ai-sdk/: SKILL.md
tests/fixtures/same-name-conflict/skills/release-notes/: SKILL.md
tests/support/: mod.rs
(+2 files in other folders)
