[package]
name = "skillctl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local-first cross-agent skill manager for the open SKILL.md ecosystem"
repository = "https://github.com/nibzard/skillctl"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
