[package]
name = "skillctl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local-first cross-agent skill manager for the open SKILL.md ecosystem"
repository = "https://github.com/nibzard/skillctl"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
